--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -15,3 +15,21 @@
 .card-container:hover {
     transform: scale(1.05);
 }
+
+.monster-image {
+    margin-bottom: 1vw;
+}
+
+.monster-name {
+    font-family: 'PT Sans', sans-serif;
+    font-weight: 700;
+    font-size: 1.3rem;
+    margin: 0;
+}
+
+.monster-email {
+    font-family: 'PT Sans', sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+    margin: 0;
+}
